--- a/assets/scss/_summary.scss
+++ b/assets/scss/_summary.scss
@@ -18,7 +18,7 @@
     line-height: 38px;
     @include breakpoint('small') {
       width: 80%;
-      font-size: 52px;
+      font-size: var(--custom-h1-size);
       line-height: 58px;
     }
   }
