--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,7 @@
   --heading-color: {{ .Site.Params.headingColor | default "#1c1b1d" }};
   --text-color: {{ .Site.Params.textColor | default "#4e5157" }};
   --dot-color: {{ .Site.Params.dotColor | default "#7b16ff" }};
+  --custom-h1-size: {{ .Site.Params.customH1size | default "12px" }};
 }
 
 $breakpoints: (
