--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -41,7 +41,7 @@ ul {
     margin-bottom: 20px;
   }
   h1 {
-    font-size: 40px;
+    font-size: var(--custom-h1-size);
     line-height: 1.6;
     font-weight: bold;
     margin-top: 30px;
@@ -51,7 +51,7 @@ ul {
     }
   }
   h2 {
-    font-size: 28px;
+    font-size: 22px;
     line-height: 1.4;
     font-weight: bold;
     margin-top: 30px;
