--- a/assets/scss/_intro.scss
+++ b/assets/scss/_intro.scss
@@ -7,16 +7,17 @@
     margin-bottom: 30px;
     @include breakpoint('small') {
       width: 80%;
-      font-size: 88px;
-      line-height: 94px;
-      margin-bottom: 50px;
+      // YYYasin19
+      font-size: 40px;
+      line-height: 48px;
+      margin-bottom: 12px;
     }
     strong {
       color: var(--highlight-color);
     }
   }
   h2 {
-    font-size: 50px;
+    font-size: 32px;
     line-height: 56px;
     @include breakpoint('small') {
       width: 80%;
