--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -7,6 +7,7 @@
     {{ end }}
     <div class="intro">
       <h1>{{ .Title }}{{ if .Site.Params.addDot }}<span class="dot">.</span>{{ end }}</h1>
+      <h2>{{ .Params.subtitle }}</h2>
       {{ if .Params.image }}
       <img src="{{ .Params.image | relURL }}" />
       {{ end }}
