--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,6 @@
 :root {
-  --font-family-heading: 'Poppins', sans-serif;
-  --font-family-paragraph: Helvetica, sans-serif;
+  --font-family-heading: 'Tilt Neon', sans-serif;
+  --font-family-paragraph: 'Nunito', sans-serif;
   --font-family-monospace: monospace;
   --base-color: {{ .Site.Params.baseColor | default "#ffffff" }};
   --base-offset-color: {{ .Site.Params.baseOffsetColor | default "#eaeaea" }};
